# Customer-Churn-Prediction

./: .gitignore  Dockerfile  LICENSE.md  README.md  main.py  prometheus.yaml  pyproject.toml  requirements.txt  setup.py
.astro/: config.yaml
artifacts/: .gitignore  model.dvc  raw.dvc
artifacts/raw/: test_data.csv  train_data.csv
assests/: chart_script.py
config/: database_config.py  path_config.py
dags/: s3_etl_to_psql.py
notebooks/: exploration.ipynb
pipeline/: training_pipeline.py
src/: data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
static/: script.js  style.css
templates/: index.html
utils/: common_functions.py
